--- a/start.html
+++ b/start.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My start.html file is not index.html file</title>
+    <h1>We are funny</h1>
 </head>
 <body>
     
