--- a/start.html
+++ b/start.html
@@ -7,6 +7,8 @@
     <title>My start.html file is not index.html file</title>
     <h1>We are funny</h1>
 </head>
+
+<img src="nora-fatai/g4662l48_nora-fatehi_625x300_24_September_21.webp" alt="">
 <body>
     
 </body>
