--- a/start.html
+++ b/start.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div>
+<h3>New Blog</h3>
+<h5>Look mama I can write a blog</h5>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae officiis deleniti amet et esse quas maxime debitis, distinctio nam tempora est hic voluptate aperiam qui! Natus neque molestiae magnam possimus!</p>
+    </div>
+    
     <title>My start.html file is not index.html file</title>
+    
     <h1>We are funny</h1>
 </head>
 
